# presence

./: .gitignore  .pre-commit-config.yaml  README.md  config.json  config.py  makefile  presence_task.py  pyproject.toml  run.py  schemas.py
crud/: cards.py  events.py  locket.py
models/: locket.py
page/: pages.py
script/: check_banned_words.py  pre_commit.py  run_pre_commit.py
task/: locket.py  presence.py  presence_task.py
